Fixed lang issues

--- a/styles/prosilver/template/event/ucp_profile_profile_info_after.html
+++ b/styles/prosilver/template/event/ucp_profile_profile_info_after.html
@@ -1,5 +1,5 @@
 <hr class="dashed">
 <dl>
-	<dt><label for="coverphoto">Coverphoto{L_COLON}</label></dt>
+	<dt><label for="coverphoto">{L_COVERPHOTO}{L_COLON}</label></dt>
 	<dd><input type="text" name="coverphoto" maxlength="255" value="{COVERPHOTO}"  /></dd>
 </dl>
