Fixed language issues

--- a/styles/prosilver/template/event/memberlist_view_user_statistics_before.html
+++ b/styles/prosilver/template/event/memberlist_view_user_statistics_before.html
@@ -1,2 +1,2 @@
-<dt>Profile Views{L_COLON}</dt> <dd>{PROFILE_VIEWS}</dd> 
-<dt>Total Topics{L_COLON}</dt> <dd>{TOTAL_TOPICS}<!-- IF S_DISPLAY_SEARCH --> | <strong><a href="{U_SEARCH_USER_TOPICS}">Search user's topics</a></strong><!-- ENDIF --></dd>
+<dt>{L_PROFILE_VIEWS}{L_COLON}</dt> <dd>{PROFILE_VIEWS}</dd> 
+<dt>{L_TOTAL_TOPICS}{L_COLON}</dt> <dd>{TOTAL_TOPICS}<!-- IF S_DISPLAY_SEARCH --> | <strong><a href="{U_SEARCH_USER_TOPICS}">{L_SEARCH_USER_TOPICS}</a></strong><!-- ENDIF --></dd>
