--- a/styles/prosilver/template/event/memberlist_view_content_prepend.html
+++ b/styles/prosilver/template/event/memberlist_view_content_prepend.html
@@ -1,2 +1,4 @@
 <!-- Start a new div for COVERPHOTO -->
-<div id="coverphoto" style="background-image: url('{COVERPHOTO}');">
+<!-- IF COVERPHOTO -->
+	<div id="coverphoto" style="background-image: url('{COVERPHOTO}');">
+<!-- ENDIF -->
