--- a/styles/prosilver/theme/advancedprofilesystem.css
+++ b/styles/prosilver/theme/advancedprofilesystem.css
@@ -91,13 +91,13 @@
 
 #coverphoto {
 	background-repeat: no-repeat;
-	background-size: 100% 100%;
+	background-size: 100%;
 	background-color: #ECF3F7;
 	border-radius: 7px;
 	max-width: 100%;
 	min-height: 100px;
-	max-height: 250px;
 	overflow: hidden;
+	margin-bottom: 4px;
 }
 
 #coverphoto .bg1 {
@@ -106,8 +106,8 @@
 
 #coverphoto .profile-avatar {
 	border: 4px solid white;
-	border-bottom-width: 3px;
 	border-top-width: 0;
+	border-bottom-width: 3px;
 	border-bottom-left-radius: 5px;
 	border-bottom-right-radius: 5px;
 	margin-top: -5px;
