--- a/styles/prosilver/template/event/ucp_profile_profile_info_after.html
+++ b/styles/prosilver/template/event/ucp_profile_profile_info_after.html
@@ -1,5 +1,7 @@
-<hr class="dashed">
-<dl>
-	<dt><label for="coverphoto">{L_COVERPHOTO}{L_COLON}</label></dt>
-	<dd><input type="text" name="coverphoto" maxlength="255" value="{COVERPHOTO}"  /></dd>
-</dl>
+<!-- IF CP_ENABLED -->
+	<hr class="dashed">
+	<dl>
+		<dt><label for="coverphoto">{L_COVERPHOTO}{L_COLON}</label></dt>
+		<dd><input type="text" name="coverphoto" maxlength="255" value="{COVERPHOTO}"  /></dd>
+	</dl>
+<!-- ENDIF -->
