--- a/styles/prosilver/template/event/ucp_profile_profile_info_after.html
+++ b/styles/prosilver/template/event/ucp_profile_profile_info_after.html
@@ -1,7 +1,8 @@
 <!-- IF CP_ENABLED -->
 	<hr class="dashed">
 	<dl>
-		<dt><label for="coverphoto">{L_COVERPHOTO}{L_COLON}</label></dt>
-		<dd><input type="text" name="coverphoto" maxlength="255" value="{COVERPHOTO}"  /></dd>
+	<dt><label for="coverphoto">{L_COVERPHOTO}{L_COLON}</label></dt>
+	        <dt><label for="coverphoto"><small>{L_COVERPHOTO_EXPLAIN}</small></label></dt> <!-- Add explanation line -->
+                <dd><input type="text" name="coverphoto" maxlength="255" value="{COVERPHOTO}"  /></dd>
 	</dl>
 <!-- ENDIF -->
